--- a/tournament-web-app/src/app/tournament-search/tournament-search.component.html
+++ b/tournament-web-app/src/app/tournament-search/tournament-search.component.html
@@ -28,6 +28,9 @@
 } @empty{
     <div>No row to show: {{tournamentList.length}}</div>
 }
-
+<span class="bar">
+<span class="spacer"></span>    
 <button mat-raised-button (click)="onCreateTournament()" color="primary">Crear un nuevo evento</button>
+<span class="spacer"></span>    
+</span>
 
