--- a/tournament-web-app/src/app/tournament-search/tournament-search.component.html
+++ b/tournament-web-app/src/app/tournament-search/tournament-search.component.html
@@ -26,11 +26,7 @@
         </mat-card-content>         
     </mat-card>     
 } @empty{
-    <div>No row to show: {{tournamentList.length}}</div>
+    <h3>No hay eventos encontrados, haga una nueva busqueda o crea tu propio evento</h3>
 }
-<span class="bar">
-<span class="spacer"></span>    
-<button mat-raised-button (click)="onCreateTournament()" color="primary">Crear un nuevo evento</button>
-<span class="spacer"></span>    
-</span>
+
 
