--- a/tournament-web-app/src/app/tournament-search/tournament-search.component.html
+++ b/tournament-web-app/src/app/tournament-search/tournament-search.component.html
@@ -22,11 +22,11 @@
                 <div>fecha:{{tournament.data().eventDate.toDate() | date: 'dd/MM/yyyy'}}</div>
                 <span class="spacer"></span>
                 <img mat-card-sm-image [src]="tournament.data().imageUrl" >  
-            </div>            
+            </div>       
         </mat-card-content>         
     </mat-card>     
 } @empty{
-    <h3>No hay eventos encontrados, haga una nueva busqueda o crea tu propio evento</h3>
+    <h3 class="not-found">No hay eventos encontrados, haga una nueva busqueda o crea tu propio evento</h3>
 }
 
 
