--- a/tournament-web-app/src/app/evaluation-list/evaluation-list.component.html
+++ b/tournament-web-app/src/app/evaluation-list/evaluation-list.component.html
@@ -1,50 +1,20 @@
-<a [routerLink]="'/tournament/'+tournamentId">
-    <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
-</a>
-<h1>Evaluaciones<button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button></h1>
-@for(g of getGroups(); track g){
-    <mat-card>
-        <mat-card-content>
-            <form [formGroup]="g">
-            
-            @if( (!isAdding && g.controls['id'].value) || g.controls['id'].value == null ){
-            <mat-form-field> 
-                <input matInput placeholder="label" formControlName="label" (change)="onChange(g.controls['id'].value)">
-            </mat-form-field>                 
-            <mat-form-field> 
-                <textarea matInput placeholder="description" formControlName="description" (change)="onChange(g.controls['id'].value)"></textarea>
-            </mat-form-field>  
-                @if( g.controls['id'].value ) {
-                <h2>Aspectos<a [routerLink]="['/','tournament',tournamentId,'evaluations',g.controls['id'].value,'aspects']">
-                    <button mat-button-icon><mat-icon>edit</mat-icon></button>
-                </a></h2>             
-                }
-            }
-            @else{
-                    {{ g.controls['label'].value }}
-                    <p>
-                    {{ g.controls['description'].value }}
-                    </p>
-            }
-            </form>
-        </mat-card-content>
-        <mat-card-actions>
-            @if( isAdding && g.controls['id'].value == null ){
-                <button id="done" name="done" mat-button (click)="onSubmit()"><mat-icon>done</mat-icon></button>
-                <button mat-button (click)="onCancelAdd()"><mat-icon>cancel</mat-icon></button>
-            }        
-            @if( !isAdding && g.controls['id'].value != null && g.enabled && !g.dirty  ){
-                <button mat-button (click)="onDelete(g.controls['id'].value)"><mat-icon>delete</mat-icon></button>               
-            }
-            @if( !isAdding && g.controls['id'].value != null && g.dirty ){
-                <button mat-button (click)="onSave(g.controls['id'].value)"><mat-icon>done</mat-icon></button>
-                <button mat-button (click)="onCancelEdit()"><mat-icon>cancel</mat-icon></button>               
-            }
-        </mat-card-actions> 
-    </mat-card>
-
+<h1>Evaluaciones
+    @if( isAdmin ){
+        <a [routerLink]="['/','tournament',tournamentId,'evaluation','null']">
+            <button mat-icon-button><mat-icon>add</mat-icon></button>
+        </a>
+    }
+</h1>
+@for( e of tournament.evaluations; track e){
     
-}    
+    <div (click)="onEvaluation(e.id)">
+        <button mat-button><span class="label">{{ e.label }}</span></button>
+        <p>
+            {{ e.description }}
+        </p>    
+    </div>
+
+}
 
 
 
