--- a/tournament-web-app/src/app/aspect-edit/aspect-edit.component.html
+++ b/tournament-web-app/src/app/aspect-edit/aspect-edit.component.html
@@ -31,7 +31,7 @@
         </form>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button (click)="onSave()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+        <button mat-button (click)="onSave()" [disabled]="!form.valid || !form.dirty"><mat-icon>done</mat-icon></button>
         <a [routerLink]="['/','tournament',tournamentId,'evaluation',evaluationId]">
             <button mat-button><mat-icon>cancel</mat-icon></button>   
         </a>                    
