--- a/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
+++ b/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
@@ -30,14 +30,15 @@
         }
         </form>
 
-        @if( tournament && evaluationId && evaluation  ) {
-            <app-aspect-list [tournamentId]="tournamentId" [tournament]="tournament" [evaluationId]="evaluationId" [evaluation]="evaluation"></app-aspect-list>          
-        }        
+    
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button (click)="onSave()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+        <button mat-button (click)="onSave()" [disabled]="!form.valid || !form.dirty"><mat-icon>done</mat-icon></button>
         <a [routerLink]="['/','tournament',tournamentId]">
             <button mat-button><mat-icon>cancel</mat-icon></button>   
         </a>                    
     </mat-card-actions>  
 </mat-card>
+@if( tournament && evaluationId && evaluation  ) {
+    <app-aspect-list [tournamentId]="tournamentId" [tournament]="tournament" [evaluationId]="evaluationId" [evaluation]="evaluation"></app-aspect-list>          
+}    
