--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -133,7 +133,7 @@
         </mat-card-content>   
         <mat-card-actions>
             @if( !tournamentId ){
-                <button mat-button-icon (click)="onSubmit()"><mat-icon>done</mat-icon></button>
+                <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
             }
         </mat-card-actions>
            
