--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -68,11 +68,17 @@
                 @if( isAdmin ){    
                     <a [routerLink]="['/','tournament',tournamentId,'categories']">
                         <button mat-button-icon><mat-icon>edit</mat-icon></button>
-                    </a>  
+                    </a>
                 }
                 </h2>
                 @for( category of tournament.categories; track category){
-                    <span class="item">{{category.label}}</span>
+                    <div>
+                    <h3 class="item">{{category.label}}</h3>
+                    <p>
+                        {{category.description}}
+                    </p> 
+                    </div> 
+
                 }               
 
                 @if(isAdmin){
@@ -111,18 +117,33 @@
                         <button mat-button-icon (click)="onPerformancesEdit()"><mat-icon>edit</mat-icon></button>
                     }
                 </h2> 
-                @if( !isLoggedIn ){
+                @for( p of performances; track p){
+                    <div class="item">
+                    {{ p.performance.label }}
+                    @if( p.isInProgram ){
+                        <mat-icon>done</mat-icon>
+                    }
+                    </div>
+                }
+                @if( performances.length == 0){
                     <a [routerLink]="['/','tournament',tournamentId,'performances']">
                         <button mat-raised-button color="accent" >Quiero presentarme</button>
                     </a>
                 }   
+
                 <mat-divider></mat-divider>                              
-                <h2>Program
+                <h2>Programa
                 @if( isAdmin ){    
                     <a [routerLink]="['/','tournament',tournamentId,'program']">
                     <button mat-button-icon><mat-icon>edit</mat-icon></button>
                 </a>
                 }</h2> 
+                @for( p of program; track p){
+                    <div class="item">{{ p.performance.label }}</div>
+                }
+                @empty{
+                    <h3>No se han adicionado performances al programa</h3>
+                }                  
                 <mat-divider></mat-divider>                  
                 <h2>Podium<a [routerLink]="['/','tournament',tournamentId,'podium']">
                     <button mat-button-icon><mat-icon>emoji_events</mat-icon></button>
