--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -106,10 +106,8 @@
                 }
                 </h2>  
                 @for( medal of tournament.medals; track medal){
-                    <span class="item">{{medal.label}}</span>
-                    <p>
-                    {{medal.description}}
-                    </p>
+                    <h3>{{medal.label}}</h3>
+                    <quill-view-html [content]="medal.description"></quill-view-html>                      
                 } 
                 <mat-divider></mat-divider> 
                 <h2>Performances
